change project name

--- a/DbProject/.project
+++ b/DbProject/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>id_316139401</name>
+	<name>DbProject</name>
 	<comment></comment>
 	<projects>
 	</projects>
